## Process this file with automake to produce Makefile.in

if PLATFORM_WIN32
runtime_pseudo_reloc = -Wl,--enable-runtime-pseudo-reloc
endif

# GUI is compiled into a static libtool shared library so we can sic
# gtk-doc on it and combine libtool static libs from sub directories.

SUBDIRS = images widgets
lib_LTLIBRARIES = libswamigui.la
bin_PROGRAMS = swami

if PYTHON_SUPPORT
opt_python_view_h = SwamiguiPythonView.h
opt_python_view_c = SwamiguiPythonView.c
opt_swami_python_h = swami_python.h
opt_swami_python_c = swami_python.c
endif

EXTRA_DIST = marshals.list swami-2.ui SwamiguiPythonView.h \
  SwamiguiPythonView.c swami_python.h swami_python.c

uixmldir = $(pkgdatadir)
uixml_DATA = swami-2.ui

BUILT_SOURCES = \
	builtin_enums.c \
	builtin_enums.h \
	marshals.c \
	marshals.h

# correctly clean the generated source files
CLEANFILES = $(BUILT_SOURCES)

libswamigui_public_h_sources = \
	$(opt_python_view_h) \
	$(opt_swami_python_h) \
	SwamiguiBar.h \
	SwamiguiBarPtr.h \
	SwamiguiCanvasMod.h \
	SwamiguiControl.h \
	SwamiguiControlAdj.h \
	SwamiguiControlMidiKey.h \
	SwamiguiItemMenu.h \
	SwamiguiKnob.h \
	SwamiguiLoopFinder.h \
	SwamiguiMenu.h \
	SwamiguiModEdit.h \
	SwamiguiMultiSave.h \
	SwamiguiNoteSelector.h \
	SwamiguiPanel.h \
	SwamiguiPanelSelector.h \
	SwamiguiPanelSF2Gen.h \
	SwamiguiPanelSF2GenEnv.h \
	SwamiguiPanelSF2GenMisc.h \
	SwamiguiPaste.h \
	SwamiguiPiano.h \
	SwamiguiPref.h \
	SwamiguiProp.h \
	SwamiguiRoot.h \
	SwamiguiSampleCanvas.h \
	SwamiguiSampleEditor.h \
	SwamiguiSpectrumCanvas.h \
	SwamiguiSpinScale.h \
	SwamiguiSplits.h \
	SwamiguiStatusbar.h \
	SwamiguiTree.h \
	SwamiguiTreeStore.h \
	SwamiguiTreeStoreConfig.h \
	SwamiguiTreeStorePatch.h \
        help.h \
	icons.h \
	patch_funcs.h \
	splash.h \
	util.h \
	widgets/combo-box.h \
	widgets/icon-combo.h


libswamigui_sources = \
	$(BUILT_SOURCES) \
	$(opt_python_view_c) \
	$(opt_swami_python_c) \
	SwamiguiBar.c \
	SwamiguiBarPtr.c \
	SwamiguiCanvasMod.c \
	SwamiguiControl.c \
	SwamiguiControl_widgets.c \
	SwamiguiControlAdj.c \
	SwamiguiControlMidiKey.c \
	SwamiguiDnd.h \
	SwamiguiItemMenu.c \
	SwamiguiItemMenu_actions.c \
	SwamiguiKnob.c \
	SwamiguiLoopFinder.c \
	SwamiguiMenu.c \
	SwamiguiModEdit.c \
	SwamiguiMultiSave.c \
	SwamiguiNoteSelector.c \
	SwamiguiPanel.c \
	SwamiguiPanelSelector.c \
	SwamiguiPanelSF2Gen.c \
	SwamiguiPanelSF2GenEnv.c \
	SwamiguiPanelSF2GenMisc.c \
	SwamiguiPaste.c \
	SwamiguiPiano.c \
	SwamiguiPref.c \
	SwamiguiProp.c \
	SwamiguiRoot.c \
	SwamiguiSampleCanvas.c \
	SwamiguiSampleEditor.c \
	SwamiguiSpectrumCanvas.c \
	SwamiguiSpinScale.c \
	SwamiguiSplits.c \
	SwamiguiStatusbar.c \
	SwamiguiTree.c \
	SwamiguiTreeStore.c \
	SwamiguiTreeStoreConfig.c \
	SwamiguiTreeStorePatch.c \
	help.c \
	i18n.h \
	icons.c \
	patch_funcs.c \
	splash.c \
	swamigui.h \
	util.c \
	widgets/combo-box.c \
	widgets/icon-combo.c

libswamigui_la_SOURCES = $(libswamigui_public_h_sources) $(libswamigui_sources)
libswamigui_la_LIBADD = $(top_srcdir)/src/libswami/libswami.la \
 @LIBINSTPATCH_LIBS@ @GUI_LIBS@ @LIBINTL@ \
 @GTK_SOURCE_VIEW_LIBS@ @PYGTK_LIBS@ @PYTHON_LIBS@

swami_SOURCES = main.c
swami_LDFLAGS = $(runtime_pseudo_reloc)

swami_LDADD = libswamigui.la $(top_srcdir)/src/libswami/libswami.la \
 @LIBINSTPATCH_LIBS@ @GUI_LIBS@ @LIBINTL@ \
 @GTK_SOURCE_VIEW_LIBS@ @PYGTK_LIBS@ @PYTHON_LIBS@ \
 @MACINTEGRATION_LIBS@

AM_CPPFLAGS = \
 -DIMAGES_DIR=\"$(pkgdatadir)/images\" \
 -DUIXML_DIR=\"$(pkgdatadir)\" \
 -DSOURCE_DIR=\"$(abs_top_srcdir)\" \
 -DLOCALEDIR=\"$(datadir)/locale\" \
 -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_srcdir)/intl \
 @GUI_CFLAGS@ @LIBINSTPATCH_CFLAGS@ \
 @GTK_SOURCE_VIEW_CFLAGS@ @PYGTK_CFLAGS@ @PYTHON_CFLAGS@ \
 @MACINTEGRATION_CFLAGS@ @APPLECF_CFLAGS@

# Installed headers
swamiguiincdir = $(includedir)/swami/swamigui
swamiguiinc_HEADERS = $(libswamigui_public_h_sources) builtin_enums.h swamigui.h

marshals.c: marshals.list
	echo "/* Autogenerated file (add to marshals.list and 'make update-marshals') */" >marshals.c
	glib-genmarshal --body --prefix=swamigui_marshal \
	  marshals.list >>marshals.c

marshals.h: marshals.list
	echo "/* Autogenerated file (add to marshals.list and 'make update-marshals') */" >marshals.h
	glib-genmarshal --header --prefix=swamigui_marshal \
	  marshals.list >>marshals.h

builtin_enums.c: s-builtin-enums-c
	@true
s-builtin-enums-c: $(libswamigui_public_h_sources) Makefile
	( cd $(srcdir) && glib-mkenums \
	  --fhead "#include <swamigui/swamigui.h>" \
	  --fprod "\n/* enumerations from \"@filename@\" */" \
	  --vhead "GType\n@enum_name@_get_type (void)\n{\n  static GType etype = 0;\n  if (etype == 0) {\n    static const G@Type@Value values[] = {" \
	  --vprod "      { @VALUENAME@, \"@VALUENAME@\", \"@valuenick@\" }," \
	  --vtail "      { 0, NULL, NULL }\n    };\n    etype = g_@type@_register_static (\"@EnumName@\", values);\n  }\n  return etype;\n}\n" \
	  $(libswamigui_public_h_sources) ) > xgen-enumc \
	&& cp xgen-enumc $(srcdir)/builtin_enums.c  \
	&& rm -f xgen-enumc

builtin_enums.h: s-builtin-enums-h
	@true
s-builtin-enums-h: $(libswamigui_public_h_sources) Makefile
	( cd $(srcdir) && glib-mkenums \
	  --fhead "#ifndef __SWAMIGUI_BUILTIN_ENUMS_H__\n#define __SWAMIGUI_BUILTIN_ENUMS_H__\n\n#include <glib-object.h>\n\nG_BEGIN_DECLS\n" \
	  --fprod "/* enumerations from \"@filename@\" */\n" \
	  --vhead "GType @enum_name@_get_type (void);\n#define SWAMIGUI_TYPE_@ENUMSHORT@ (@enum_name@_get_type())\n" \
	  --ftail "G_END_DECLS\n\n#endif /* __SWAMIGUI_BUILTIN_ENUMS_H__ */" \
	  $(libswamigui_public_h_sources) ) > xgen-enumh \
	&& (cmp -s xgen-enumh $(srcdir)/builtin_enums.h \
            || cp xgen-enumh $(srcdir)/builtin_enums.h ) \
	&& rm -f xgen-enumh
